WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
151934
[EFL] MiniBrowser doesn't exit when called ewk_view_try_close()
https://bugs.webkit.org/show_bug.cgi?id=151934
Summary
[EFL] MiniBrowser doesn't exit when called ewk_view_try_close()
Ryuan Choi
Reported
2015-12-07 02:17:25 PST
Bug 151567
reported the regression of
r192053
(In fact, it's the regression since
r192528
) It's because tryClose() returned immediately without calling close callback when the page does not have onbeforeunload callback since
r192528
.
Attachments
Patch
(3.67 KB, patch)
2015-12-07 02:44 PST
,
Ryuan Choi
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ryuan Choi
Comment 1
2015-12-07 02:44:03 PST
Created
attachment 266761
[details]
Patch
Csaba Osztrogonác
Comment 2
2015-12-07 02:51:38 PST
Comment on
attachment 266761
[details]
Patch rs=me
WebKit Commit Bot
Comment 3
2015-12-07 03:46:47 PST
Comment on
attachment 266761
[details]
Patch Clearing flags on attachment: 266761 Committed
r193619
: <
http://trac.webkit.org/changeset/193619
>
WebKit Commit Bot
Comment 4
2015-12-07 03:46:51 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug