[EFL] MiniBrowser doesn't exit when called ewk_view_try_close() https://bugs.webkit.org/show_bug.cgi?id=151934

Reviewed by Csaba Osztrogonác.

Source/WebKit2:

* UIProcess/API/efl/ewk_view.cpp:
(ewk_view_try_close):
Called window_close callback immediately when WKPageTryClose returns true.
* UIProcess/API/efl/tests/test_ewk2_view.cpp:
(TEST_F): Improved test cases for try_close to test when content does not contain
onbeforeunload callback.

Tools:

* MiniBrowser/efl/main.c:
(on_window_deletion): Revert the changes of r192767.


Canonical link: https://commits.webkit.org/170069@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@193619 268f45cc-cd09-0410-ab3c-d52691b4dbfc